--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.0.5",
-    "@ai-sdk/google": "^1.0.9",
     "@ai-sdk/openai": "^1.0.8",
+    "@azure/openai": "^2.0.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.1",
@@ -26,6 +26,8 @@
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
+    "openai": "^5.20.3",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
